--- a/frontend/src/app/empleo/mis-ofertas.component.css
+++ b/frontend/src/app/empleo/mis-ofertas.component.css
@@ -1,4 +1,3 @@
-#buscar,
 .lista {
     margin: 0 auto;
     width: 70%;
@@ -19,6 +18,7 @@
 
 li {
     color: white;
+    background-color: #212529;
 }
 
 .table {
@@ -34,6 +34,12 @@ li {
   
 
 iframe{
-    margin: 0 auto;
-    width: 1250px;
-  }
+    width: 100%;
+    height: 700px;
+}
+
+button,p {
+  margin: 1vw;
+}
+#lista
+{display: flex;}
