--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -25,3 +25,12 @@ footer p {
 footer a {
   text-decoration: none;
 }
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+router-outlet {
+  min-height: 100%;
+}
