--- a/frontend/src/app/empleo/lista-empleo.component.css
+++ b/frontend/src/app/empleo/lista-empleo.component.css
@@ -14,7 +14,7 @@
     margin: 1.5vw auto;
     padding: 1vw;
     background-color: #212529;
-    border-radius: 1vw;
+    border-radius: 0.75vw;
     box-shadow: 0px 0px 10px rgb(230, 230, 230);
 }
 
@@ -28,7 +28,7 @@
 
 .lista {
     box-shadow: 0px 0px 1vw rgb(230, 230, 230);
-    border-radius: 1vw;
+    border-radius: 0.75vw;
 }
 
 li {
@@ -38,11 +38,13 @@ li {
 .table {
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 1vw;
+    border-radius: 0.75vw;
     overflow: hidden;
   }
 
 .table td {
     vertical-align: middle;
   }
-  
+  button{
+    margin: 2vw;
+  }
