--- a/frontend/src/app/empleo/mis-ofertas.component.css
+++ b/frontend/src/app/empleo/mis-ofertas.component.css
@@ -1,19 +1,11 @@
-.lista {
-    margin: 0 auto;
-    width: 70%;
-}
-
-#logo {
-    max-width: 10vw;
-    max-height: 10vw;
-}
-
-
 
 .lista {
     box-shadow: 0px 0px 1vw rgb(230, 230, 230);
-    border-radius: 1vw;
     background-color: #212529;
+    margin: 5vw auto;
+    width: 70%;
+    list-style: none;
+    border-radius: 1vw;
 }
 
 li {
@@ -21,25 +13,27 @@ li {
     background-color: #212529;
 }
 
-.table {
-    border-collapse: separate;
-    border-spacing: 0;
-    border-radius: 1vw;
-    overflow: hidden;
-  }
-
-.table td {
-    vertical-align: middle;
-  }
-  
-
 iframe{
     width: 100%;
     height: 700px;
 }
 
-button,p {
+button,p, p b {
   margin: 1vw;
 }
-#lista
-{display: flex;}
+
+#logo {
+  max-width: 10vw;
+  max-height: 10vw;
+  margin: 1vw;
+}
+
+#listaOfertas{
+  border-radius: 0.75vw;
+}
+h1{
+  color: white;
+  text-align: center;
+  margin: 2vw;
+  font-size: 4em;
+}
