--- a/frontend/src/app/empleo/mis-ofertas.component.html
+++ b/frontend/src/app/empleo/mis-ofertas.component.html
@@ -1,15 +1,15 @@
 <app-menu></app-menu>
 <div class="lista" *ngIf="!listaVacia">
   <ul id="listaOfertas" class="list-group list-group-dark">
+    <h1>Mis ofertas</h1>
     <ng-container *ngFor="let empleo of empleos">
       <li class="list-group-item">
         <div class="d-flex justify-content-between align-items-center">
           <div class="d-flex justify-content-between align-items-center">
             <img id="logo" src="{{empleo.logo}}" alt="logo" class="mr-3">
-            <p class="mb-1">{{empleo.titulo}}</p>
-            <p class="mb-1">{{empleo.empresa}}</p>
-            <p class="mb-1">{{empleo.ubicacion}}</p>
-            <p class="mb-1">{{ publicado(empleo.createdAt) }}</p>
+            <p> <b>OFERTA: </b>{{empleo.titulo}}</p>
+            <p>|</p>
+            <p>{{ publicado(empleo.createdAt) }}</p>
           </div>
           <div>
             <button class="btn btn-outline-primary mr-2" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i
