--- a/frontend/src/app/auth/registroEmpresa/registro-empresa.component.html
+++ b/frontend/src/app/auth/registroEmpresa/registro-empresa.component.html
@@ -16,28 +16,28 @@
 
         <div class="card-body">
             <form class="form-group">
-                <label for="nombre">Nombre:</label>
+                <label for="nombre">Nombre: <span>*</span></label>
                 <input type="text" class="form-control mb-3" name="nombre" id="nombre" required [(ngModel)]="nombre">
                 
-                <label for="apellidos">Apellidos:</label>
+                <label for="apellidos">Apellidos: <span>*</span></label>
                 <input type="text" class="form-control mb-3" name="apellidos" id="apellidos" required [(ngModel)]="apellidos">
                 
-                <label for="empresa">Empresa:</label>
+                <label for="empresa">Empresa: <span>*</span></label>
                 <input type="text" class="form-control mb-3" name="empresa" id="empresa" required [(ngModel)]="empresa">
             
-                <label for="telefono">telefono:</label>
+                <label for="telefono">Telefono: <span>*</span></label>
                 <input type="number" min="0" class="form-control mb-3" name="telefono" id="telefono" required [(ngModel)]="telefono">
             
-                <label for="cif">cif:</label>
+                <label for="cif">Cif: <span>*</span></label>
                 <input type="text" class="form-control mb-3" name="cif" id="cif" required [(ngModel)]="cif">
             
-                <label for="descripcion">Descripción de la empresa:</label>
+                <label for="descripcion">Descripción de la empresa: <span>*</span></label>
                 <textarea class="form-control" name="descripcion mb-3" id="descripcion" rows="4" required [(ngModel)]="descripcion"></textarea>
             
-                <label for="email">Email:</label>
+                <label for="email">Email: <span>*</span></label>
                 <input type="text" class="form-control mb-3" name="email" id="email" required [(ngModel)]="email">
             
-                <label for="password">Contraseña:</label>
+                <label for="password">Contraseña: <span>*</span></label>
                 <input type="password" class="form-control mb-3" name="password" id="password" required [(ngModel)]="password">
             
                 <button class="btn btn-outline-success btn-block" (click)="onRegister()"><i class="fa-solid fa-user-plus"></i> Registrate</button>
