--- a/frontend/src/app/empleo/misOfertas/mis-ofertas.component.html
+++ b/frontend/src/app/empleo/misOfertas/mis-ofertas.component.html
@@ -11,7 +11,7 @@
             <p>|</p>
             <p>{{ publicado(empleo.createdAt) }}</p>
           </div>
-          <div>
+          <div id="botones">
             <button class="btn btn-outline-primary mr-2" (click)="alertaLogin()" routerLink="/detalle/{{empleo.id}}"><i
                   class="far fa-eye"></i>
               Ver</button>
