--- a/frontend/src/app/menu/menu.component.html
+++ b/frontend/src/app/menu/menu.component.html
@@ -38,9 +38,10 @@
         <div class="col-md-4 offset-md-4">
           <div class="card">
             <div class="card-header">
-              <a class="btn btn-outline-primary" routerLink="/login-empresa"><i class="fas fa-circle-user"></i> Accede como empresa</a>
-              <a class="btn btn-outline-danger" routerLink="/login-candidato"><i class="fas fa-circle-user"></i> Accede como
+              <a class="btn btn-outline-primary"*ngIf="!isLogged" routerLink="/login-empresa"><i class="fas fa-circle-user"></i> Accede como empresa</a>
+              <a class="btn btn-outline-danger" *ngIf="!isLogged"routerLink="/login-candidato"><i class="fas fa-circle-user"></i> Accede como
                 candidato</a>
+                  <a class="btn btn-outline-danger"  *ngIf="isLogged" (click)="logOut()"><i class="fa-solid fa-right-from-bracket"></i> Cerrar sesion</a>
             </div>
             <div class="card-body">
               <div class="list-group">
@@ -48,7 +49,7 @@
                   ofertas</a>
                 <a routerLink="/nuevo" (click)="alertaLoginEmpresa()"   class="list-group-item list-group-item-action"><i class="fas fa-plus-circle"></i>
                   Crear una oferta de empleo</a>
-                <a routerLink="/" (click)="alertaLoginEmpresa()"  class="list-group-item list-group-item-action"><i class="fas fa-circle-user"></i> Ver
+                <a routerLink="/mis-ofertas" (click)="alertaLoginEmpresa()"  class="list-group-item list-group-item-action"><i class="fas fa-circle-user"></i> Ver
                   mis ofertas de empleo</a>
               </div>
             </div>
