--- a/frontend/src/app/empleo/lista/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista/lista-empleo.component.html
@@ -56,6 +56,7 @@
       <tr>
         <th scope="col"></th>
         <th scope="col">Puesto</th>
+        <th scope="col">Salario</th>
         <th scope="col">Empresa</th>
         <th scope="col">Jornada</th>
         <th scope="col">Ubicación</th>
@@ -68,6 +69,7 @@
       <tr *ngFor="let empleo of empleosFiltrados">
         <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
         <td>{{empleo.titulo}}</td>
+        <td>{{empleo.salario}}€</td>
         <td>{{empleo.empresa}}</td>
         <td>{{empleo.jornada}}</td>
         <td>{{empleo.ubicacion}}</td>
@@ -77,4 +79,30 @@
         </td>
     </tbody>
   </table>
+</div>
+
+
+<div class="listaMovil" *ngIf="!listaVacia">
+  <ul id="listaOfertas" class="list-group list-group-dark">
+    <ng-container *ngFor="let empleo of empleos">
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex justify-content-between">
+            <img id="logo" src="{{empleo.logo}}" alt="logo">
+            <p><b>Puesto: </b>{{empleo.titulo}}</p>
+            <p><b>Salario: </b>{{empleo.salario}}€</p>
+            <p><b>Empresa: </b>{{empleo.empresa}}</p>
+            <p><b>Jornada: </b>{{empleo.jornada}}</p>
+            <p><b>Ubicación: </b>{{empleo.ubicacion}}</p>
+            <p><b>Publicada: </b>{{ publicado(empleo.createdAt) }}</p>
+          </div>
+          <div id="botones">
+            <button class="btn btn-outline-primary mr-2" routerLink="/detalle/{{empleo.id}}"><i
+                  class="far fa-eye"></i>
+              Ver</button>
+          </div>
+        </div>
+      </li>
+    </ng-container>
+  </ul>
 </div>
