--- a/frontend/src/app/empleo/lista/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista/lista-empleo.component.html
@@ -28,7 +28,7 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let empleo of empleos">
+      <tr *ngFor="let empleo of empleos | slice:(page-1)*pageSize:page*pageSize">
         <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
         <td>{{empleo.titulo}}</td>
         <td>{{empleo.salario}}€</td>
@@ -40,6 +40,10 @@
             Ver</button>
     </tbody>
   </table>
+  <div *ngIf="mostrarTabla" class="pagination justify-content-center">
+    <pagination [(ngModel)]="page" [totalItems]="collectionSize" [itemsPerPage]="pageSize" [maxSize]="5"
+      [rotate]="false"></pagination>
+  </div>
 </div>
 
 <!-- Si la lista esta vacia mostrara... -->
@@ -79,11 +83,15 @@
         </td>
     </tbody>
   </table>
+  <div *ngIf="empleosFiltrados?.length ?? 0 > 0" class="pagination justify-content-center">
+    <pagination [(ngModel)]="pageFiltrada" [totalItems]="collectionSize" [itemsPerPage]="pageSize" [maxSize]="5"
+      [rotate]="false"></pagination>
+  </div>
 </div>
 
 
 <div class="listaMovil" *ngIf="!listaVacia">
-  <ul id="listaOfertas" class="list-group list-group-dark">
+  <ul id="listaOfertas" class="list-group list-group-dark" *ngIf="mostrarTabla">
     <ng-container *ngFor="let empleo of empleos">
       <li class="list-group-item">
         <div class="d-flex justify-content-between">
@@ -97,8 +105,31 @@
             <p><b>Publicada: </b>{{ publicado(empleo.createdAt) }}</p>
           </div>
           <div id="botones">
-            <button class="btn btn-outline-primary mr-2" routerLink="/detalle/{{empleo.id}}"><i
-                  class="far fa-eye"></i>
+            <button class="btn btn-outline-primary mr-2" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
+              Ver</button>
+          </div>
+        </div>
+      </li>
+    </ng-container>
+  </ul>
+</div>
+
+<div class="listaMovil" *ngIf="empleosFiltrados?.length ?? 0 > 0">
+  <ul id="listaOfertas" class="list-group list-group-dark">
+    <ng-container *ngFor="let empleo of empleosFiltrados">
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <div class="d-flex justify-content-between">
+            <img id="logo" src="{{empleo.logo}}" alt="logo">
+            <p><b>Puesto: </b>{{empleo.titulo}}</p>
+            <p><b>Salario: </b>{{empleo.salario}}€</p>
+            <p><b>Empresa: </b>{{empleo.empresa}}</p>
+            <p><b>Jornada: </b>{{empleo.jornada}}</p>
+            <p><b>Ubicación: </b>{{empleo.ubicacion}}</p>
+            <p><b>Publicada: </b>{{ publicado(empleo.createdAt) }}</p>
+          </div>
+          <div id="botones">
+            <button class="btn btn-outline-primary mr-2" routerLink="/detalle/{{empleo.id}}"><i class="far fa-eye"></i>
               Ver</button>
           </div>
         </div>
