--- a/frontend/src/app/empleo/lista/lista-empleo.component.css
+++ b/frontend/src/app/empleo/lista/lista-empleo.component.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   width: 70%;
 }
+
 #logo {
   max-width: 30vw;
   max-height: 30vw;
@@ -10,17 +11,17 @@
 }
 
 .listaMovil {
-    box-shadow: 0px 0px 1vw rgb(230, 230, 230);
-    background-color: #212529;
-    margin: 5vw auto;
-    width: 70%;
-    list-style: none;
-    border-radius: 1vw;
+  box-shadow: 0px 0px 1vw rgb(230, 230, 230);
+  background-color: #212529;
+  margin: 5vw auto;
+  width: 70%;
+  list-style: none;
+  border-radius: 1vw;
 }
 
 li {
-    color: white;
-    background-color: #212529;
+  color: white;
+  background-color: #212529;
 }
 
 #buscador {
@@ -40,6 +41,7 @@ li {
 #buscador>input {
   width: 98%;
 }
+
 .lista {
   display: none;
 }
@@ -47,7 +49,8 @@ li {
 .d-flex.justify-content-between {
   flex-direction: column;
 }
-#botones{
+
+#botones {
   margin: 0 auto;
 }
 
@@ -58,6 +61,10 @@ li {
     max-height: 13vw;
     margin: 1vw;
     margin-left: 3vw;
+  }
+
+  .mobil {
+    display: none;
   }
 
   #buscar,
@@ -77,7 +84,8 @@ li {
   #buscador>input {
     width: 60%;
   }
-  .listaMovil{
+
+  .listaMovil {
     display: none;
   }
 
