--- a/frontend/src/app/empleo/lista/lista-empleo.component.html
+++ b/frontend/src/app/empleo/lista/lista-empleo.component.html
@@ -42,7 +42,7 @@
   </table>
   <div *ngIf="mostrarTabla" class="pagination justify-content-center">
     <pagination [(ngModel)]="page" [totalItems]="collectionSize" [itemsPerPage]="pageSize" [maxSize]="5"
-      [rotate]="false"></pagination>
+      [rotate]="false" previousText="Anterior" nextText="Siguiente"></pagination>
   </div>
 </div>
 
@@ -70,7 +70,7 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let empleo of empleosFiltrados">
+      <tr *ngFor="let empleo of empleosFiltrados  | slice:(page-1)*pageSize:page*pageSize">
         <td><img id="logo" src="{{empleo.logo}}" alt="logo"></td>
         <td>{{empleo.titulo}}</td>
         <td>{{empleo.salario}}€</td>
@@ -84,15 +84,15 @@
     </tbody>
   </table>
   <div *ngIf="empleosFiltrados?.length ?? 0 > 0" class="pagination justify-content-center">
-    <pagination [(ngModel)]="pageFiltrada" [totalItems]="collectionSize" [itemsPerPage]="pageSize" [maxSize]="5"
-      [rotate]="false"></pagination>
+    <pagination [(ngModel)]="page" [totalItems]="collectionSize" [itemsPerPage]="pageSize" [maxSize]="5"
+      [rotate]="false" previousText="Anterior" nextText="Siguiente"></pagination>
   </div>
 </div>
 
 
 <div class="listaMovil" *ngIf="!listaVacia">
   <ul id="listaOfertas" class="list-group list-group-dark" *ngIf="mostrarTabla">
-    <ng-container *ngFor="let empleo of empleos">
+    <ng-container *ngFor="let empleo of empleos | slice:(page-1)*pageSizeMobil:page*pageSizeMobil">
       <li class="list-group-item">
         <div class="d-flex justify-content-between">
           <div class="d-flex justify-content-between">
@@ -113,10 +113,14 @@
     </ng-container>
   </ul>
 </div>
+<div *ngIf="mostrarTabla" class="pagination justify-content-center mobil">
+  <pagination [(ngModel)]="page" [totalItems]="collectionSize" [itemsPerPage]="pageSizeMobil" [maxSize]="2"
+    [rotate]="false" previousText="Anterior" nextText="Siguiente"></pagination>
+</div>
 
 <div class="listaMovil" *ngIf="empleosFiltrados?.length ?? 0 > 0">
   <ul id="listaOfertas" class="list-group list-group-dark">
-    <ng-container *ngFor="let empleo of empleosFiltrados">
+    <ng-container *ngFor="let empleo of empleosFiltrados | slice:(page-1)*pageSizeMobil:page*pageSizeMobil">
       <li class="list-group-item">
         <div class="d-flex justify-content-between">
           <div class="d-flex justify-content-between">
@@ -136,4 +140,8 @@
       </li>
     </ng-container>
   </ul>
+</div>
+<div *ngIf="empleosFiltrados?.length ?? 0 > 0" class="pagination justify-content-center mobil">
+  <pagination [(ngModel)]="page" [totalItems]="collectionSize" [itemsPerPage]="pageSizeMobil" [maxSize]="2"
+    [rotate]="false"  previousText="Anterior" nextText="Siguiente"></pagination>
 </div>
