--- a/frontend/src/app/empleo/misOfertas/mis-ofertas.component.css
+++ b/frontend/src/app/empleo/misOfertas/mis-ofertas.component.css
@@ -1,65 +1,81 @@
-
 .lista {
-    box-shadow: 0px 0px 1vw rgb(230, 230, 230);
-    background-color: #212529;
-    margin: 5vw auto;
-    width: 70%;
-    list-style: none;
-    border-radius: 1vw;
+  box-shadow: 0px 0px 1vw rgb(230, 230, 230);
+  background-color: #212529;
+  margin: 5vw auto;
+  width: 70%;
+  list-style: none;
+  border-radius: 1vw;
 }
 
 li {
-    color: white;
-    background-color: #212529;
+  color: white;
+  background-color: #212529;
 }
 
-iframe{
-    width: 100%;
-    height: 700px;
+iframe {
+  width: 100%;
+  height: 700px;
 }
 
-button,p, p b {
+button,
+p,
+p b {
   margin: 1vw;
 }
 
 #logo {
-  max-width: 15vw;
-  max-height: 15vw;
+  max-width: 25vw;
+  max-height: 25vw;
   margin: 1vw;
   margin-left: 3vw;
 }
 
-#listaOfertas{
+#listaOfertas {
   border-radius: 0.75vw;
 }
-h1{
+
+h1 {
   color: white;
   text-align: center;
   margin: 2vw;
-  font-size: 4em;
+  font-size: 2em;
 }
-#botones{
+
+#botones {
   display: block;
 }
+
 .d-flex.justify-content-between.align-items-center {
   flex-direction: column;
 }
 
-p:nth-child(4){
+p:nth-child(4),
+b {
   display: none;
+}
+button{
+  margin-top: 1rem;
 }
 
 @media(min-width:768px) {
+  
   .d-flex.justify-content-between.align-items-center {
     flex-direction: row;
   }
-  p:nth-child(4){
+
+  p:nth-child(4) {
     display: block;
   }
+
   #logo {
     max-width: 10vw;
     max-height: 10vw;
     margin: 1vw;
     margin-left: 3vw;
+  }
+
+  h1 {
+    margin: 2vw;
+    font-size: 4em;
   }
 }
