--- a/frontend/src/app/empleo/detalle/detalle-empleo.component.css
+++ b/frontend/src/app/empleo/detalle/detalle-empleo.component.css
@@ -8,6 +8,7 @@
 }
 
 .card {
+    width: 17rem;
     padding: 1vw;
     border-radius: 1vw;
     box-shadow: 0px 0px 10px white;
@@ -25,7 +26,25 @@
 li:nth-child(1) {
     margin: 1.5rem auto;
 }
-.container{
+
+.container {
     display: flex;
     justify-content: center;
+}
+.btn-outline-danger, .btn-outline-success{
+    margin:1rem 1rem 0 1rem;
+}
+
+
+.btn-outline-primary{
+    margin: 0 1rem 1rem 1rem;
+}
+
+@media(min-width:768px) {
+    .card {
+        width: 40rem;
+    }
+    .btn-outline-primary{
+        margin-bottom: 0;
+    }
 }
