--- a/frontend/src/app/empleo/detalle/detalle-empleo.component.html
+++ b/frontend/src/app/empleo/detalle/detalle-empleo.component.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row mt-5">
         <div class="col-md-4 ">
-            <div class="card" style="width: 40rem; ">
+            <div class="card">
                 <ul class="list-group list-group-flush">
                     <li class="list-grou-item"><img id="logo" src="{{empleo.logo}}" alt="logo">
                     </li>
