--- a/frontend/src/app/empleo/misOfertas/mis-ofertas.component.css
+++ b/frontend/src/app/empleo/misOfertas/mis-ofertas.component.css
@@ -2,7 +2,7 @@
   box-shadow: 0px 0px 1vw rgb(230, 230, 230);
   background-color: #212529;
   margin: 5vw auto;
-  width: 70%;
+  width: 75%;
   list-style: none;
   border-radius: 1vw;
 }
@@ -62,7 +62,7 @@ button{
     flex-direction: row;
   }
 
-  p:nth-child(4) {
+  p:nth-child(4),b{
     display: block;
   }
 
